# webXOS

./: .dockerignore  .env  .env.example  .gitignore  1 (1).html  1.html  112quantumrelayinfo.html  112testquantumrelay.html  12.html  1webgamenew2.html  1webxosgameinfo.html  2026.html  20264final.html  3DMESH.html  3DMESH_README.md  3d.html  3d2.html  3d3.html  3deditor.html  3dstudy.html  3dstudy2.html  808ai.html  808ai4.html  AGENTS.md  ANYTHING.html  AR_GUI.html  AR_SIM2.html  Bluemesh_2025_Final_Prompt.markdown  CONTRIBUTING.markdown  CONTRIBUTING.md  GITOS.html  GITOS_README.MD  INSTALLATION.markdown  INSTALLATION.md  Index.html  LEGACY_OS.html  LEVEL1.HTML  LICENSE  LICENSE.txt  LICENSE_Version2.txt  (+672 more)
CLI_TERMINALS/: README.md  ada_basic_1.html  bios_pwa_terminal1.html  dos_terminal.html  ibm_legacy_terminal1.html  ibm_legacy_terminal2.html  multimodal_terminal1.html  rag_terminal_idea1.html  rag_terminal_idea2.html  surge_OS_broken.html  webXOS_Crawl_CLI.html  webxos_ascii_terminal1.html  webxosterminalui3.html
QUANTUMIDE/: github_dependabot.yaml  github_workflows_lint.yaml  quantum-ide_.txt  quantum-ide_Dockerfile.txt  quantum-ide_README.markdown  quantum-ide_config.yaml  quantum-ide_netlify.txt  quantum-ide_quantumide.html  quantum-ide_qutip_sim.py  quantum-ide_requirements.txt  quantum-ide_server.py  readme.md
TRASH/: 3rd person galaxycraft engine.html  3rd person view engine1.html  3rd person view engine2.html  3rd person view engine3.html  OG_editor.html  README.MD  ai_chess_alpha1.html  (+61 more)
rustyclaw/: Cargo.toml  README.md  start.sh
rustyclaw/src/: main.rs
(+1314 files in other folders)
