[package]
name = "rustyclaw"
version = "0.6.0"
edition = "2021"

[[bin]]
name = "rustyclaw"
path = "src/main.rs"

[dependencies]
anyhow          = "1.0"
bytes           = "1.5"
chrono          = { version = "0.4", features = ["serde"] }
crossterm       = "0.27"
dirs            = "5.0"
rand            = "0.8"
ratatui         = "0.25"
regex           = "1.10"
reqwest         = { version = "0.11", features = ["json"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
serde_yaml      = "0.9"
tokio           = { version = "1.35", features = ["full", "process"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "chrono"] }
walkdir         = "2"
warp            = "0.3"
